# xatlas-python

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: install-and-test.yml  install.yml  wheels.yml
src/: CMakeLists.txt  atlas.cpp  atlas.hpp  module.cpp  options.cpp  options.hpp  utils.cpp  utils.hpp
tests/: test_atlas.py  test_functions.py
