[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja; sys_platform != 'win32'",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "xatlas"
requires-python = ">=3.8"
version = "0.0.10"
authors = [{name = "Markus Worchel", email = "m.worchel@campus.tu-berlin.de"}]
license = {file = "LICENSE"}
description = "Python bindings for xatlas"
urls = {Homepage = "https://github.com/mworchel/xatlas-python"}

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = ["numpy",
        "pytest",
        "scipy",
        "trimesh"]

[tool.cibuildwheel]
# Run the package tests on every wheel using `pytest`
test-command = "pytest {package}/tests"
# will install pytest and other packages in the `test` extra
test-extras = ["test"]

[tool.setuptools]
license-files = []
