[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "xatlas"
requires-python = ">=3.8"
version = "0.0.10"
authors = [{name = "Markus Worchel", email = "m.worchel@campus.tu-berlin.de"}]
license = {file = "LICENSE"}
description = "Python bindings for xatlas"
urls = {Homepage = "https://github.com/mworchel/xatlas-python"}

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = ["numpy",
        "pytest",
        "scipy",
        "trimesh"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

[tool.cibuildwheel]
# Run the package tests on every wheel using `pytest`
test-command = "pytest {package}/tests"
# will install pytest and other packages in the `test` extra
test-extras = ["test"]

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"